[gd_scene load_steps=10 format=3 uid="uid://dolgi31y22pxf"]

[ext_resource type="Script" uid="uid://c4tlt5f4rh01m" path="res://scripts/ink.gd" id="1_fno4c"]
[ext_resource type="Texture2D" uid="uid://de5rcne5monc6" path="res://textures/particles/ink_moving.png" id="1_ooo7e"]
[ext_resource type="Texture2D" uid="uid://cyjfrrf7f51kq" path="res://textures/particles/ink_floor.png" id="2_yve10"]
[ext_resource type="Texture2D" uid="uid://0ql7ihg3786p" path="res://textures/particles/ink_floor_fill_between.png" id="3_kgoru"]
[ext_resource type="Script" uid="uid://c5y4l4060kgnb" path="res://scripts/ink_surface.gd" id="3_nsj0n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fno4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ooo7e")
}],
"loop": false,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fno4c"]
size = Vector2(4, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_yve10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yve10")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kgoru")
}],
"loop": true,
"name": &"fill_between",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgoru"]
size = Vector2(6, 2)

[node name="ink" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_fno4c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_fno4c")
animation = &"moving"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fno4c")

[node name="ink_surface" type="Area2D" parent="."]
z_index = -3
position = Vector2(0, 2)
collision_mask = 6
script = ExtResource("3_nsj0n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ink_surface"]
visible = false
clip_children = 2
z_index = -3
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_yve10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ink_surface"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_kgoru")
disabled = true

[node name="Kill_Timer" type="Timer" parent="ink_surface"]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="ink_surface" to="ink_surface" method="_on_body_entered"]
[connection signal="body_exited" from="ink_surface" to="ink_surface" method="_on_body_exited"]
[connection signal="timeout" from="ink_surface/Kill_Timer" to="." method="_on_kill_timer_timeout"]
